--- a/Dok/Kapitel/TechnischesUndFormeln.tex
+++ b/Dok/Kapitel/TechnischesUndFormeln.tex
@@ -53,11 +53,11 @@ Bei $y_0$ handelt es sich um die Amplitude des Tons, also dessen Lautstärke. Al
 F ist wie oben bereits beschrieben die Frequenz des Tons. Sie gibt die Anzahl der Schwingungen (Perioden) pro Sekunde an und wird in $f=\frac{1}{T}$ angegeben, wobei T die Periodendauer ist. Die Einheit ist Hertz(Hz).
 Je größer die Frequenz eines Tones ist, desto höher klingt er für das Ohr.
 
-Physikalisch gesehen ist ein Ton eine periodische Änderung des Luftdruckt, also Luftmoleküle die um ihre Ruhelage in Schwingung versetzt werden\cite{EinfAkustik}. Als Medium kann jedoch auch etwas anderer als Luft dienen, zum Beispiel Wasser.
+Physikalisch gesehen ist ein Ton eine periodische Änderung des Luftdruckt, also Luftmoleküle die um ihre Ruhelage in Schwingung versetzt werden\cite[s. 111 f.]{zwicker}. 
 
-Für das menschliche Ohr hören sich Sinus- und Cosinusschwingungen gleich an, da diese lediglich um $\frac{1}{4}$ der Periode verschoben sind. 
+Für das menschliche Ohr hören sich Sinus- und Cosinusschwingungen gleich an, da diese lediglich um $\frac{1}{4}$ der Periode verschoben sind und es in der realen Welt ohnehin keine perfekten Schwingungen geben kann \cite[s. 3f.]{zwicker}. 
 
-\subsubsection{Erklärung: Parameter der FM-Synthese nach Chowning}
+\subsubsection{Parameter der FM-Synthese nach Chowning}
 
 In diesem Kapitel wird auf die unterschiedlichen Parameter eingegangen, welche in der Formel der einfachen Frequenzmodulation von John Chowning vorkommen. Zudem wird deren Funktion im Einzelnen beschrieben.
 
